<resources>
    <string name="app_name">Udacity Project Inventory App</string>
    <string name="action_insert_dummy_data">Insert dummy data</string>
    <string name="action_delete_all_entries">Delete entire inventory</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="supplier_email_address">Supplier email address</string>
    <string name="click_below_to_add_a_photo">Click below to \nadd a photo</string>
    <string name="buy">Set buy price</string>
    <string name="currency_pounds">£</string>
    <string name="not_required">(Not required)</string>
    <string name="price">Price</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="item_name">Item name</string>
    <string name="_0_00">0.00</string>
    <string name="item_price">Item price</string>
    <string name="stock">Stock</string>
    <string name="it_s_empty_in_here">It\'s empty in here...</string>
    <string name="start_by_adding_an_item">Start by adding an item!</string>
    <string name="action_save">save</string>
    <string name="action_delete">Delete</string>
    <string name="orderMore">Order more</string>
    <string name="editor_activity_title_new_item">Add an item</string>
    <string name="editor_activity_title_edit_item">Edit item</string>
    <string name="click_below_to_update_photo">Click below to \nupdate photo</string>
    <string name="in_stock">In stock: </string>
    <string name="editor_insert_item_failed">Error with saving this item</string>
    <string name="editor_insert_item_successful">Item saved</string>
    <string name="editor_update_item_failed">Error with updating item</string>
    <string name="editor_update_item_successful">Item updated</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editiing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="delete_dialog_msg">Delete this item?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_item_failed">Error with deleting this item</string>
    <string name="editor_delete_item_successful">Item deleted</string>
    <string name="delete_entire_entries">Delete entire inventory?</string>
    <string name="item_name_required">Item name required</string>
    <string name="_name">, name</string>
    <string name="_supplier_email_address">, supplier email address</string>
    <string name="_price">, price</string>
    <string name="requires_input">requires input.</string>
    <string name="cannot_have_less_than_0_stock">Cannot have less than 0 stock</string>
</resources>
