<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/editor_margin"
    android:orientation="vertical">

    <TextView
        android:id="@+id/photo_text_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/very_small_margin_left"
        android:fontFamily="sans-serif" />

    <ImageView
        android:id="@+id/editor_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/photo_text_help"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_image_add" />

    <LinearLayout
        android:id="@+id/name_and_price_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/photo_text_help"
        android:layout_marginLeft="@dimen/very_small_margin_left"
        android:layout_toRightOf="@id/editor_image"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_name"
            android:textColor="@color/button_color"
            android:textSize="@dimen/large_text_size" />

        <EditText
            android:id="@+id/editor_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_margin_left"
            android:hint="@string/name"
            android:textSize="@dimen/editor_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_and_price_section"
        android:layout_marginLeft="@dimen/very_small_margin_left"
        android:layout_toRightOf="@id/editor_image"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_price"
            android:textColor="@color/button_color"
            android:textSize="@dimen/large_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_margin_left"
            android:text="@string/currency_pounds"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editor_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_0_00"
            android:inputType="numberDecimal"
            android:textSize="@dimen/editor_text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/email_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editor_image"
        android:layout_marginTop="@dimen/large_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/very_small_margin_left"
            android:text="@string/email"
            android:textColor="@color/button_color"
            android:textSize="@dimen/large_text_size" />

        <EditText
            android:id="@+id/editor_supplier_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_margin_left"
            android:hint="@string/supplier_email_address"
            android:textSize="@dimen/editor_text_size" />

    </LinearLayout>

    <TextView
        android:id="@+id/stock_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_section"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/stock"
        android:textSize="@dimen/large_text_size"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/set_stock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/stock_word"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/button_color"
            android:text="-"
            android:textColor="@android:color/white"
            android:textSize="@dimen/large_text_size" />

        <TextView
            android:id="@+id/editor_stock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/extremely_large_text"
            tools:text="1" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/button_color"
            android:text="+"
            android:textColor="@android:color/white"
            android:textSize="@dimen/large_text_size" />

    </LinearLayout>
</RelativeLayout>